--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@vee-validate/zod": "^4.6.2",
     "axios": "^0.27.2",
     "pinia": "^2.0.16",
+    "vee-validate": "^4.6.4",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2",
     "zod": "^3.17.10"
