--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,8 @@
     "helmet": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.1",
+    "multer": "^1.4.5-lts.1",
+    "music-metadata": "^8.0.1",
     "uuid": "^8.3.2"
   }
 }
