--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "vee-validate": "^4.6.4",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2",
+    "vue-toast-notification": "3.0",
     "zod": "^3.17.10"
   },
   "devDependencies": {
